--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <span class="input-group-text">
                                 <i class="bi bi-person-fill"></i>
                             </span>
-                            <input type="text" class="form-control" id="name">
+                            <input type="text" class="form-control" id="name" required>
                         </div>
 
                         <label for="age" class="form-label">Age:</label>
@@ -72,7 +72,7 @@
                             <span class="input-group-text">
                                 <i class="bi bi-person-fill"></i>
                             </span>
-                            <input type="number" class="form-control" id="age">
+                            <input type="number" class="form-control" id="age" required>
                         </div>
 
                         <label for="email" class="form-label">Email:</label>
@@ -80,7 +80,7 @@
                             <span class="input-group-text">
                                 <i class="bi bi-envelope-fill"></i>
                             </span>
-                            <input type="email" class="form-control" id="email">
+                            <input type="email" class="form-control" id="email" required>
                         </div>
 
                         <div class="mb-4 text-center">
@@ -107,14 +107,18 @@
             var age = document.getElementById('age').value;
             var email = document.getElementById('email').value;
 
-            fetch('https://studentsapi.onrender.com/addstudent',
-                {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ 'name': name, 'age': age, 'email': email }),
-                })
+            if (!(name == '' || age == '' || email == '')) {
+                fetch('https://studentsapi.onrender.com/addstudent',
+                    {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({ 'name': name, 'age': age, 'email': email }),
+                    })
+            }
+
+
         }
 
         fetch('https://studentsapi.onrender.com/students')
@@ -128,9 +132,9 @@
                     document.getElementById('ul').appendChild(li);
 
                     var content = `
-                    <div class="card" style="width: 19rem;">
+                    <div class="card"">
                         <div class="card-header text-center">ID: ${i}</div>
-                        <ul class="list-group list-group-flush">
+                        <ul class="list-group list-group-flush text-nowrap">
                             <li class="list-group-item"><strong>Name: </strong>${student.name}</li>
                             <li class="list-group-item"><strong>Age: </strong>${student.age}</li>
                             <li class="list-group-item"><strong>Email: </strong>${student.email}</li>
@@ -139,7 +143,7 @@
                     `;
                     var div = document.createElement('div');
                     div.innerHTML = content;
-                    div.className = 'col-9 col-lg-4 col-xl-3';
+                    div.className = 'col-9 col-lg-4 col-md-5 col-xl-3';
                     document.getElementById('container').appendChild(div);
                     i++;
                 });
