--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="row justify-content-center my-3">
                 <div class="col-lg-6 px-5">
-                    <form action="index.html">
+                    <form action="https://mohamadalasaed.github.io/studentsweb/">
                         <label for="name" class="form-label">Name:</label>
                         <div class="mb-4 input-group">
                             <span class="input-group-text">
