--- a/index.html
+++ b/index.html
@@ -58,33 +58,33 @@
             </div>
             <div class="row justify-content-center my-3">
                 <div class="col-lg-6 px-5">
-                        <label for="name" class="form-label">Name:</label>
-                        <div class="mb-4 input-group">
-                            <span class="input-group-text">
-                                <i class="bi bi-person-fill"></i>
-                            </span>
-                            <input type="text" class="form-control" id="name" required>
-                        </div>
+                    <label for="name" class="form-label">Name:</label>
+                    <div class="mb-4 input-group">
+                        <span class="input-group-text">
+                            <i class="bi bi-person-fill"></i>
+                        </span>
+                        <input type="text" class="form-control" id="name" required>
+                    </div>
 
-                        <label for="age" class="form-label">Age:</label>
-                        <div class="mb-4 input-group">
-                            <span class="input-group-text">
-                                <i class="bi bi-person-fill"></i>
-                            </span>
-                            <input type="number" class="form-control" id="age" required>
-                        </div>
+                    <label for="age" class="form-label">Age:</label>
+                    <div class="mb-4 input-group">
+                        <span class="input-group-text">
+                            <i class="bi bi-person-fill"></i>
+                        </span>
+                        <input type="number" class="form-control" id="age" required>
+                    </div>
 
-                        <label for="email" class="form-label">Email:</label>
-                        <div class="mb-4 input-group">
-                            <span class="input-group-text">
-                                <i class="bi bi-envelope-fill"></i>
-                            </span>
-                            <input type="email" class="form-control" id="email" required>
-                        </div>
+                    <label for="email" class="form-label">Email:</label>
+                    <div class="mb-4 input-group">
+                        <span class="input-group-text">
+                            <i class="bi bi-envelope-fill"></i>
+                        </span>
+                        <input type="email" class="form-control" id="email" required>
+                    </div>
 
-                        <div class="mb-4 text-center">
-                            <button type="submit" class="btn btn-primary" onclick="addStudent();">Submit</button>
-                        </div>
+                    <div class="mb-4 text-center">
+                        <button type="submit" class="btn btn-primary" onclick="addStudent();">Submit</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -112,23 +112,33 @@
                             'Content-Type': 'application/json',
                         },
                         body: JSON.stringify({ 'name': name, 'age': age, 'email': email }),
+                    }).then(() => {
+                        clearFields();
+                        getStudents();
                     })
             }
-
-
         }
 
-        fetch('https://studentsapi.onrender.com/students')
-            .then(response => response.json())
-            .then(json => {
-                document.getElementById('size').innerHTML = json.length;
-                var i = 1;
-                json.forEach(student => {
-                    var li = document.createElement('li');
-                    li.innerHTML = student.name;
-                    document.getElementById('ul').appendChild(li);
+        function clearFields() {
+            document.getElementById('name').value = '';
+            document.getElementById('age').value = '';
+            document.getElementById('email').value = '';
+        }
 
-                    var content = `
+        getStudents();
+
+        function getStudents() {
+            fetch('https://studentsapi.onrender.com/students')
+                .then(response => response.json())
+                .then(json => {
+                    document.getElementById('size').innerHTML = json.length;
+                    var i = 1;
+                    json.forEach(student => {
+                        var li = document.createElement('li');
+                        li.innerHTML = student.name;
+                        document.getElementById('ul').appendChild(li);
+
+                        var content = `
                     <div class="card"">
                         <div class="card-header text-center">ID: ${i}</div>
                         <ul class="list-group list-group-flush text-nowrap">
@@ -138,13 +148,15 @@
                         </ul>
                     </div>       
                     `;
-                    var div = document.createElement('div');
-                    div.innerHTML = content;
-                    div.className = 'col-9 col-lg-4 col-md-5 col-xl-3';
-                    document.getElementById('container').appendChild(div);
-                    i++;
-                });
-            })
+                        var div = document.createElement('div');
+                        div.innerHTML = content;
+                        div.className = 'col-9 col-lg-4 col-md-5 col-xl-3';
+                        document.getElementById('container').appendChild(div);
+                        i++;
+                    });
+                })
+        }
+
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
