--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         getStudents();
 
         function getStudents() {
+            document.getElementById('container').innerHTML = '';
             fetch('https://studentsapi.onrender.com/students')
                 .then(response => response.json())
                 .then(json => {
