--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
 
     <!-- students -->
-    <section style="margin-top: 80px;">
+    <section style="margin-top: 80px;" id="top">
         <div class="container-lg">
             <div class="display-4 text-center">
                 List of students: <span id="size">0</span>
@@ -83,7 +83,7 @@
                     </div>
 
                     <div class="mb-4 text-center">
-                        <button type="submit" class="btn btn-primary" onclick="addStudent();">Submit</button>
+                        <a" class="btn btn-primary" href="#top" onclick="addStudent();">Submit</a>
                     </div>
                 </div>
             </div>
